Changelog
=========

2015/12/05 (v0.5.0-1)
 - updating example.py

2015/11/18 (v0.5.0)
 - Closes bugs :
   - #11 Display only one osclass/osmatch instead of multiple

 - Change in data structure :
   - osmatch is a list of osclass	
   - osclass is a list of dictionnary
   - added cpe which is a list of string
   - added portused which is a list of dictionnary

   Data structure for a host looks like :
```python	
      {'addresses': {'ipv4': '127.0.0.1'},
       'hostnames': [],
       'osmatch': [{'accuracy': '98',
                    'line': '36241',
                    'name': 'Juniper SA4000 SSL VPN gateway (IVE OS 7.0)',
                    'osclass': [{'accuracy': '98',
                                 'cpe': ['cpe:/h:juniper:sa4000',
                                         'cpe:/o:juniper:ive_os:7'],
                                 'osfamily': 'IVE OS',
                                 'osgen': '7.X',
                                 'type': 'firewall',
                                 'vendor': 'Juniper'}]},
                   {'accuracy': '91',
                    'line': '17374',
                    'name': 'Citrix Access Gateway VPN gateway',
                    'osclass': [{'accuracy': '91',
                                 'cpe': [],
                                 'osfamily': 'embedded',
                                 'osgen': None,
                                 'type': 'proxy server',
                                 'vendor': 'Citrix'}]}],
       'portused': [{'portid': '443', 'proto': 'tcp', 'state': 'open'},
                    {'portid': '113', 'proto': 'tcp', 'state': 'closed'}],
       'status': {'reason': 'syn-ack', 'state': 'up'},
       'tcp': {113: {'conf': '3',
                     'cpe': '',
                     'extrainfo': '',
                     'name': 'ident',
                     'product': '',
                     'reason': 'conn-refused',
                     'state': 'closed',
                     'version': ''},